test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/bad_arg_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[43]:
  int
  identifier(foo)
  (
  int
  *
  *
  identifier(x)
  )
  {
  return
  identifier(x)
  [
  const int(0)
  ]
  [
  const int(0)
  ]
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(1)
  ]
  =
  {
  const int(10)
  }
  ;
  return
  identifier(foo)
  (
  &
  identifier(arr)
  )
  ;
  }
